<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_CommandEventTM" Id="{d4f326fd-232d-4073-98c4-6d105840a095}">
    <Declaration><![CDATA[TYPE E_CommandEventTM :
(
	RobotHome,
	MoveCartesianPTP,
	MoveCartesianLine,
	SetJointPositions,
	SetJointSpeeds,
	GripON,
	GripOFF
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>